<resources>

<!--    <string name="api_url">http://192.168.0.165/SuchaneSvamitvaAPI/</string>-->
<!--    <string name="api_url">http://117.252.86.211/SuchaneSvamitvaAPI/</string>-->
    <string name="api_url">https://rdservices.karnataka.gov.in/Service27/</string>
    <string name="api_user_id">56dhsuiejn83j9633ssgeu8dm9djs235dh965fhslopc098jd</string>
    <string name="api_password">2d87duikdmc673jsnlpa0245whjdkkfn63xmlopwq96auehsa</string>

    <string-array name="app_languages">
        <item>Kannada</item>
        <item>English</item>
    </string-array>

    <string-array name="document_name">
        <item>PID</item>
        <item>Tax Receipt</item>
        <item>Property Photo</item>
        <item>Other document</item>
    </string-array>
    <string name="other_document">Other document</string>

    <string name="app_name">SUCHANE [Svamitva]</string>
    <string name="token">token</string>
    <string name="token_type">token_type</string>
    <string name="grant_type">password</string>
    <string name="Auth">authentication</string>
    <string name="refresh_tkn">refresh_token</string>
    <string name="welcome_to">Welcome To</string>
    <string name="mobile_no_hint">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="logo_name">GOK Logo</string>
    <string name="bhoomi">Bhoomi</string>
    <string name="kar">Government Of Karnataka</string>
    <string name="copyright_bhoomi_monitoring_cell_2020_all_right_reserved">Copyright© Bhoomi Monitoring Cell - 2020  All Right Reserved</string>
    <string name="select_village">Select Village</string>
    <string name="select_hobli">Select Hobli</string>
    <string name="select_taluk">Select Taluk</string>
    <string name="select_district">Select District</string>
    <string name="fetch">Fetch</string>
    <string name="token_error">Security token expired.Please logout and login again</string>
    <string name="refresh_token">Security token refreshed successfully. You can try again.</string>
    <string name="district">District</string>
    <string name="taluk">Taluk</string>
    <string name="hobli">Hobli</string>
    <string name="village">Village</string>
    <string name="colon">:</string>
    <string name="town">Town</string>
    <string name="ward">Ward</string>
    <string name="notice">Notice</string>
    <string name="dpr">DPR</string>
    <string name="fpr">FPR</string>
    <string name="title_activity_otp_verify">OTP Verification</string>
    <string name="resend">Resend</string>
    <string name="please_enter_otp_sent_to">please enter otp sent to</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="your_location">Your Location</string>
    <string name="select_location">Select user location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="pending">Pending</string>
    <string name="served">Served</string>
    <string name="notice_number">Notice Number</string>
    <string name="address_code">Address Code</string>
    <string name="lat">Lat</string>
    <string name="long1">Long</string>
    <string name="enter_above_notice_number_and_address_code_in_notice_you_are_serving">(Write the above Notice number and Address code in Notice you are serving)</string>
    <string name="click_full_property_land_photo">Click full Property/\nLand Photo</string>
    <string name="click_photo_of_serving_of_notice">Click photo of Serving \nof Notice</string>
    <string name="click_photo_of_serving_of_dpr_fpr">Click photo of Serving \DPR/FPR</string>
    <string name="star">*</string>
    <string name="enter_postal_address">Enter Owner Postal Address and other Details</string>
    <string name="door_no">Door No</string>
    <string name="building">Building</string>
    <string name="street_or_area">Street / Area</string>
    <string name="landmark">Landmark</string>
    <string name="save">Save</string>
    <string name="save_amp_next"><![CDATA[Save & Next]]></string>
    <string name="home">Home</string>
    <string name="sl_no">Sl.No.</string>
    <string name="property_no">Property No.</string>
    <string name="municipal_gpfd">Municipal/GPFD</string>
    <string name="owner_name">Owner name</string>
    <string name="action">Action</string>
    <string name="serve">Serve</string>
    <string name="postal_address">Postal Address</string>
    <string name="service_amp_photos_you_must_be_near_prperty_land_to_click_photo"><![CDATA[Service & Photos \n(You must be near prperty / Land to click Photo)]]></string>
    <string name="owner_details">Owner Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="version">Version : 1.0.0.0</string>
    <string name="select_jurisdiction">Select Jurisdiction</string>
    <string name="please_switch_on_the_internet">Please Switch on the Internet</string>
    <string name="enter_valid_otp_to_proceed">Enter Valid OTP To Proceed</string>
    <string name="designation">Designation</string>
    <string name="role">Role</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="zero">0</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="enter_otp_sent_to_owner_number">Enter OTP sent to Owner Number</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="pending_count">Pending Count</string>
    <string name="approved">Approved</string>
    <string name="completed_count">Completed Count</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="property_number">Property No.</string>
    <string name="no_pending_data">No Pending data</string>
    <string name="no_approved_data">No Approved data</string>
    <string name="doc_pid_owner">Doc/PID/Owner</string>
    <string name="docs_upload">Docs Upload</string>
    <string name="docs_upload_for_notice_not_generated_properties">Docs Upload \n(For Notice not generated Properties)</string>
    <string name="click_photo_of_pid_tax_receipt">Click photo of PID/Tax receipt</string>
    <string name="document_of_pid_tax_receipt_is_mandatory">Document of PID/Tax receipt is mandatory</string>
    <string name="documents">Documents</string>
    <string name="click_photo_of_property_or_alternate_documents">Click photo of property or alternate documents</string>
    <string name="add_document">Add Document</string>
    <string name="document_id">Document ID</string>
    <string name="document_name">Document Name</string>
    <string name="enter_name_of_the_document">Enter name of the Document</string>
    <string name="ok">OK</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="bulletPoint">•</string>
    <string name="no_document_captured">No document captured</string>
    <string name="select_document_name">Select Document Name</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="view_pdf">View PDF</string>
</resources>