<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item android:id="@+id/send"
        android:icon="@drawable/ic_baseline_send_24"
        android:title="@string/send"
        app:showAsAction="never" />
    <item android:id="@+id/version"
        android:icon="@drawable/ic_baseline_build_24"
        android:title="@string/version"
        app:showAsAction="never" />
</menu>