<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
        <variable
            name="viewModel"
            type="com.bmc.suchane_svamitva.view_model.DocsUploadFinalViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name_of_the_document"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_drive_file_rename_outline_24"
            app:drawableLeftCompat="@drawable/ic_baseline_drive_file_rename_outline_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:error="@{viewModel.editDocsNameError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/document_name"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:text="@{viewModel.editDocsName}"
                    android:onTextChanged="@{viewModel::onContactDocsNameTextChanged}"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    style="@style/btn"
                    android:onClick="@{viewModel::onClickSetDocsName}"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    style="@style/btn"
                    android:onClick="@{viewModel::onClickCancel}"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>